Issue #17098: Make sure every module has __loader__ defined.

Thanks to Thomas Heller for the bug report.